Home Page updates

--- a/app/views/shared/_signed_in_home.html.erb
+++ b/app/views/shared/_signed_in_home.html.erb
@@ -5,9 +5,10 @@
 			<%= render 'shared/micropost_form' %>
 			<%= render 'shared/feed' %>
 			</td>
+<!-- Commenting out sidebar stats
 			<td class="sidebar round">
 				<%= render 'shared/user_info' %>
-				<%= render 'shared/stats' %>
+				<%= render 'shared/stats' %> -->
 			</td>
 		</tr>
 	</table>
