--- a/app/views/shared/_signed_out_home.html.erb
+++ b/app/views/shared/_signed_out_home.html.erb
@@ -3,6 +3,11 @@
 This is the Home Page for Campus Smack
 </p>
 <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
-<p></p>
+<br>
 <div class = "colleges">Click On Your Campus Below</div>
-<a href = "/gthome" class = "collegelink">Georgia Tech Home Page</a>
+
+<% @colleges.each do |college| %>
+<a href = "/gthome"><%=h college.name %></a><br>
+<% end %>
+
+
