--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,11 +14,14 @@
 	<%= will_paginate @microposts %>
 	<% end %>
 </td>
+<!--Commenting out Stat sidebar
+
 <td class="sidebar round">
 	<strong>Name</strong> <%= @user.name %> <br />
 	<strong>URL</strong> <%= link_to user_path(@user), @user %>
 	<strong>Microposts</strong> <%= @user.microposts.count %>
 	<%= render 'shared/stats' %>
-	</td>
+	</td> 
+	-->
   </tr>
 </table> 
