--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -1,7 +1,21 @@
+
+<table class="masthead">
+<tr>
+	<td>
+		<%= @college.name %> |
+		<%= link_to "Smacks", college_smacks_path(@college) %> |
+		<%= link_to "Redemptions", college_redemptions_path(@college) %>
+	</td>
+</tr>
+</table>
 <h1><%= @college.name %></h1>
-<p><%= @college.name %>: <%= link_to "Smacks", college_smacks_path(@college) %> | <%= link_to "Redemptions", college_redemptions_path(@college) %> <br>
-<br>
-<a href = "/gtredemption">GT Redemption</a>
+<table class="masthead">
+<tr>
+	<td>
+		Videos | Photos | News | Stats
+	</td>
+</tr>
+</table>
 <% unless @college.posts.empty? %>
   <table class="microposts" summary="User microposts">
 	<%= render @posts %>
