--- a/app/views/smacks/index.html.erb
+++ b/app/views/smacks/index.html.erb
@@ -1,5 +1,22 @@
-	<td class="main">
-		<h1 class="micropost">All <%= @college.name %> Smacks</h1>
-		<%= will_paginate(@smacks)%>
-		<%= render @smacks %>
+	<table class="masthead">
+	<tr>
+		<td>
+			<%= @college.name %> |
+			<%= link_to "Home", college_path(@college) %> |
+			<%= link_to "Redemptions", college_redemptions_path(@college) %>
 		</td>
+	</tr>
+	</table>	
+		<h1><%= @college.name %> Smacks</h1>
+			<table class="masthead">
+			<tr>
+				<td>
+					Videos | Photos | News | Stats
+				</td>
+			</tr>
+			</table>
+		<a><%= link_to "Add a Smack", new_college_smack_path(@college) %></a>
+		<table class = "post">
+		<%= render @smacks %>
+		</table>
+		<%= will_paginate(@smacks)%>
