--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -176,9 +176,9 @@ table.microposts {
 margin-top: 1em; 
 }
 
-table.microposts tr {
+/*table.microposts tr {
 height: 70px;
-}
+}*/
 
 table.microposts tr td.gravatar { 
 	border-top: 1px solid #ccc; 
@@ -189,7 +189,7 @@ table.microposts tr td.gravatar {
 table.microposts tr td.micropost { 
 	border-top: 1px solid #ccc; 
 	vertical-align: top; 
-	padding-top: 10px;
+	padding-top: 0px;
 }
 
 table.microposts tr td.micropost span.timestamp { 
@@ -226,4 +226,30 @@ form.new_micropost textarea {
 div.colleges {
 	font-size: 160%;
 	color: #ff0000;	
+}
+
+table.masthead {
+	width: 475px; 
+	border: 0px; 
+	border-collapse: collapse;
+	border-spacing: 10px;
+	background-color: #ddd;
+	border-radius: 10px;
+}
+
+table.masthead td {
+	width: 500px;
+	font-size: 90%;
+	padding-left: 12px;
+	padding-right: 10px;
+	white-space: nowrap;
+}
+
+td.post#title {
+	padding: 0px;
+	font-size: 125%;	
+}
+
+span.vote {
+	text-align: right;
 }
