--- a/app/views/redemptions/new.html.erb
+++ b/app/views/redemptions/new.html.erb
@@ -1,5 +1,15 @@
+<table class="masthead">
+<tr>
+	<td>
+		<%= @college.name %> |
+		<%= link_to "Home", college_path(@college) %> |
+		<%= link_to "Smacks", college_smacks_path(@college) %> |
+		<%= link_to "Redemptions", college_redemptions_path(@college) %>
+	</td>
+</tr>
+</table>
 <h1>Submit a <%= @college.name %> Redemption</h1>
-<%= form_for ([@college, @redemption]) do |f| %> 
+<%= form_for [@college, @redemption], :html => { :multipart => true }  do |f| %> 
 <%= render 'shared/fields', :f => f %>
 <div class="actions">
 	<%= f.submit "Submit" %> 
