--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,7 +1,15 @@
 <%= render 'shared/error_messages', :object => f.object %> 
 <div class="field">
-<%= f.label :name %><br />
-<%= f.text_field :name %> 
+<%= f.label :username %><br />
+<%= f.text_field :username %> 
+</div>
+<div class="field">
+<%= f.label :first_name %><br />
+<%= f.text_field :first_name %> 
+</div>
+<div class="field">
+<%= f.label :last_name %><br />
+<%= f.text_field :last_name %> 
 </div>
 <div class="field"> <%= f.label :email %><br /> <%= f.text_field :email %>
 </div> 
