--- a/app/views/smacks/_smack.html.erb
+++ b/app/views/smacks/_smack.html.erb
@@ -13,7 +13,12 @@
 		<span class="timestamp"><br>
 			Posted <%= time_ago_in_words(smack.created_at) %> ago.
 			</span>
-		</td>									
+		</td>		
+		<td>
+							<%= link_to "delete", smack, :method => :delete,
+															 :confirm => "You sure",
+															 :title => smack.content %>
+			</td>							
 	</tr>
 
 </ul>
