--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,4 @@
-<table class="masthead">
-<tr>
-	<td>
-		<%= @college.name %> |
-		<%= link_to "Home", college_path(@college) %> |
-		<%= link_to "Smacks", college_smacks_path(@college) %> |
-		<%= link_to "Redemptions", college_redemptions_path(@college) %>
-	</td>
-</tr>
-</table>	
-	
+<%= render 'shared/masthead1' %>	
 		<h1>All <%= @college.name %> Posts</h1>
 		<table class="masthead">
 		<tr>
