--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,4 @@
-<table class="masthead">
-<tr>
-	<td>
-		<%= @college.name %> |
-		<%= link_to "Home", college_path(@college) %> |
-		<%= link_to "Smacks", college_smacks_path(@college) %> |
-		<%= link_to "Redemptions", college_redemptions_path(@college) %>
-	</td>
-</tr>
+<%= render 'shared/masthead1' %>
 </table>
 <h1>Submit a <%= @college.name %> Post</h1>
 <%= form_for [@college, @post], :html => { :multipart => true }  do |f| %> 
