--- a/app/views/redemptions/show.html.erb
+++ b/app/views/redemptions/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/masthead1' %>
-<h1><%= @college.name %></h1>
+<h1><%= @college.name %> Redemption</h1>
 <table class="masthead">
 <tr>
 	<td>
@@ -7,9 +7,7 @@
 	</td>
 </tr>
 </table>
-<% unless @college.posts.empty? %>
   <table class="microposts" summary="User microposts">
-	<%= render @posts %>
+	<%= render @redemption %>
 	</table>
-	<%= will_paginate @posts %>
-	<% end %>
+
