--- a/app/views/smacks/index.html.erb
+++ b/app/views/smacks/index.html.erb
@@ -1,11 +1,4 @@
-	<table class="masthead">
-	<tr>
-		<td>
-			<%= @college.name %> |
-			<%= link_to "Home", college_path(@college) %> |
-			<%= link_to "Redemptions", college_redemptions_path(@college) %>
-		</td>
-	</tr>
+<%= render 'shared/masthead1' %>
 	</table>	
 		<h1><%= @college.name %> Smacks</h1>
 			<table class="masthead">
