--- a/app/views/shared/_fields.html.erb
+++ b/app/views/shared/_fields.html.erb
@@ -6,6 +6,10 @@
 <%= f.label :content_type %><br />
 <%= f.text_field :content_type %> 
 </div>
+<div class="field">
+<%= f.label :comments %><br />
+<%= f.text_area :comments %> 
+</div>
 <div class="field">For a video post:<br>
 <%= f.label :youtube_link %><br />
 <%= f.text_field :content %> 
