--- a/app/views/smacks/index.html.erb
+++ b/app/views/smacks/index.html.erb
@@ -8,7 +8,7 @@
 				</td>
 			</tr>
 			</table>
-		<a><%= link_to "Add a Smack", new_college_smack_path(@college) %></a>
+		<a><%= link_to "Add a Smack", new_user_college_smack_path(@college) %></a>
 		<table class = "post">
 		<%= render @smacks %>
 		</table>
