--- a/app/views/redemptions/new.html.erb
+++ b/app/views/redemptions/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/masthead1' %>
 <h1>Submit a <%= @college.name %> Redemption</h1>
-<%= form_for [@college, @redemption], :html => { :multipart => true }  do |f| %> 
+<%= form_for [@user, @college, @redemption], :html => { :multipart => true }  do |f| %> 
 <%= render 'shared/fields', :f => f %>
 <div class="actions">
 	<%= f.submit "Submit" %> 
