--- a/app/views/shared/_signed_in_home.html.erb
+++ b/app/views/shared/_signed_in_home.html.erb
@@ -1,14 +1,8 @@
-<table class="front" summary="For signed-in users">
-	<tr>
-		<td class="main">
-			<h1 class="micropost">What's up?</h1>
-			<%= render 'shared/micropost_form' %>
-			<%= render 'shared/feed' %>
-			</td>
-<!-- Commenting out sidebar stats
-			<td class="sidebar round">
-				<%= render 'shared/user_info' %>
-				<%= render 'shared/stats' %> -->
-			</td>
-		</tr>
-	</table>
+<h1>Campus Smack</h1>
+<p>
+This is the Home Page for Campus Smack
+</p>
+<div class = "colleges">Click On Your Campus Below</div>
+<% @colleges.each do |college| %>
+<%= link_to college.name, college %><br>
+<% end %>
