--- a/app/views/smacks/show.html.erb
+++ b/app/views/smacks/show.html.erb
@@ -1,12 +1,4 @@
-
-<table class="masthead">
-<tr>
-	<td>
-		<%= link_to @college.name, "/colleges/#{@college.id}" %> |
-		<%= link_to "Smacks", college_smacks_path(@college) %> |
-		<%= link_to "Redemptions", college_redemptions_path(@college) %>
-	</td>
-</tr>
+<%= render 'shared/masthead1' %>
 </table>
 <h1><%= @college.name %> Smack</h1>
 <table class="masthead">
