Fixed add smack/redemp

--- a/app/views/redemptions/index.html.erb
+++ b/app/views/redemptions/index.html.erb
@@ -8,7 +8,9 @@
 				</td>
 			</tr>
 			</table>
+			<% if signed_in? %>
 		<a><%= link_to "Add a Redemption", new_user_college_redemption_path(@college) %></a>
+			<% end %>
 		<%= will_paginate(@redemptions)%>
 		<table class = "post">
 		<%= render @redemptions %>
