--- a/app/views/redemptions/show.html.erb
+++ b/app/views/redemptions/show.html.erb
@@ -8,6 +8,6 @@
 </tr>
 </table>
   <table class="microposts" summary="User microposts">
-	<%= render @redemption %>
+	<%= render :partial => "/posts/post", :object => @redemption %>
 	</table>
 
