--- a/app/views/smacks/show.html.erb
+++ b/app/views/smacks/show.html.erb
@@ -9,5 +9,5 @@
 </tr>
 </table>
   <table class="microposts" summary="User microposts">
-	<%= render @smack %>
+	<%= render :partial => "/posts/post", :object => @smack %>
 	</table>
