--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <ul>
-	<td class ="post", id = "title"><%= link_to post.title, "/#{post.type.downcase}s/#{post.id}" %> 
+	<td class ="post", id = "title"><%= link_to post.title, "/colleges/#{post.college_id}/posts/#{post.id}" %> 
 	</td>
 	<tr>
 		<td>
@@ -13,16 +13,16 @@
 					</span>
 		</td>	
 		<td>
-			<span class="comments"><%= post.comments %>
-			<% if !post.comments.nil? %>
-				<%= link_to " [more...]", "/#{post.type.downcase}s/#{post.id}" %>
+			<span class="comments"><%= post.post_summary %>
+			<% if !post.post_summary.nil? && !request.fullpath.include?("posts") %>
+				<%= link_to " [more...]", "/colleges/#{post.college_id}/posts/#{post.id}" %>
 			<% end %></span>
 		</td>
 		<td width = 10%>
 			<% if signed_in? %>
-			<span class = "vote"><%= link_to "Vote Up"  %></span><br>		
+			<span class = "vote"><%= button_to "Vote Up" %></span><br>		
 			<span class = "vote">Total Votes: <%= post.up_votes %></span><br>
-			<span class = "vote"><%= link_to "Vote Down" %><%=post.id%></span>
+			<span class = "vote"><%= button_to "Vote Down"%></span>
 			<% else %>
 			<span class = "vote">Total Votes: <%= post.vote %></span>
 			<% end %>
