--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 			</td>
 		</tr>
 		</table>
-		<a><%= link_to "Add a Smack", new_college_smack_path(@college) %></a>
+		<a><%= button_to "Add a Smack", new_college_smack_path(@college), :method => :get %></a>
 		<%= will_paginate(@posts)%>
 		<table class = "post">
 		<%= render @posts %>
