--- a/app/views/shared/_fields.html.erb
+++ b/app/views/shared/_fields.html.erb
@@ -7,8 +7,8 @@
 <%= f.text_field :content_type %> 
 </div>
 <div class="field">
-<%= f.label :comments %><br />
-<%= f.text_area :comments %> 
+<%= f.label :post_summary %><br />
+<%= f.text_area :post_summary %> 
 </div>
 <div class="field">For a video post:<br>
 <%= f.label :youtube_link %><br />
