--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,5 +1,5 @@
-<%= render 'shared/error_messages', :object => f.object %>  
+ 
 <div class="field">
-<%= f.label :comments %><br />
-<%= f.text_area :comments, :class => "comment" %> 
+<%= f.label :comment %><br />
+<%= f.text_area :comment, :class => "comment" %> 
 </div>
