--- a/public/stylesheets/blueprint/src/typography.css
+++ b/public/stylesheets/blueprint/src/typography.css
@@ -97,7 +97,7 @@ th,td,caption { padding: 4px 10px 4px 5px; }
   the class "even" to every other table row.
  */
 tbody tr:nth-child(even) td,
-tbody tr.even td  {
+tbody.post tr.even td  {
   background: #e5ecf9;
 }
 tfoot       { font-style: italic; }
