--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -277,3 +277,7 @@ textarea.comment {
         border: 3px solid #cccccc;
         padding: 5px;
 }
+
+table.comments {
+	background-color: #ddd;
+}
