Fixed Comment Delete

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -5,7 +5,7 @@
 <div class="actions">
   	<%= f.submit "Update Comment" %>	
 </div>
-<div class="actions"><%= button_to "Delete Comment", @comment, :method => :delete,
+<% end %>
+<div><%= button_to "Delete Comment", @comment, :method => :delete,
 														:confirm => "You sure"%>
 </div>
-<% end %>
