--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -8,7 +8,7 @@
 </tr>
 </table>
 <% unless @college.posts.empty? %>
-  <table class="microposts" summary="User microposts">
+  <table class="post" summary="User microposts">
 
 	<%= render :partial => "/posts/post", :collection => @posts %>
 	</table>
