--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
 	</td>
 </tr>
 </table>
-  <table class="microposts" summary="User microposts">
+  <table class="post" summary="User microposts">
 	<%= render :partial => "/posts/post", :object => @post %>
 	</table>
 	<% if signed_in? %>
