--- a/app/views/redemptions/index.html.erb
+++ b/app/views/redemptions/index.html.erb
@@ -9,7 +9,7 @@
 			</tr>
 			</table>
 			<% if signed_in? %>
-		<a><%= button_to "Add a Redemption", new_user_college_redemption_path(@college), :method => :get %></a>
+		<a><%= button_to "Add a Redemption", new_user_college_redemption_path(@user, @college), :method => :get %></a>
 		<% else %>
 		<a><%= button_to "Add a Redemption", signin_path, :method => :get %></a>
 			<% end %>
