--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,4 @@
+
 <ul>
 	<td class ="post", id = "title"><%= link_to post.title, "/colleges/#{post.college_id}/posts/#{post.id}" %> 
 	</td>
@@ -21,10 +22,10 @@
 		<td class = "vote" width = 10%>
 			<% if signed_in? %>
 			<span class = "vote"><%= link_to image_tag('arrow-up.png'), vote_up_post_path(post), :method => :post %></span><br>		
-			<span class = "vote"><b><%= post.votes_for %><b> </span><br>
+			<span class = "vote"><b><%= post.votes_for_b %><b> </span><br>
 			<span class = "vote"><%= link_to image_tag('arrow-down.png'), vote_down_post_path(post), :method => :post %></span>
 			<% else %>
-			<span class = "vote"><b><%= post.votes_for %><b></span>
+			<span class = "vote"><b><%= post.votes_for_b %><b></span>
 			<% end %>
 		</td>		
 			<td width = 5%>
