--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -11,7 +11,8 @@
 <%= f.label :last_name %><br />
 <%= f.text_field :last_name %> 
 </div>
-<div class="field"> <%= f.label :email %><br /> <%= f.text_field :email %>
+<div class="field"> <%= f.label :email %><br /> 
+<%= f.text_field :email %>
 </div> 
 <div class="field">
 <%= f.label :password %><br />
