--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,10 @@
 <table class="profile" summary="Profile information">
 	<tr>
 		<td class="main">
-<h1>
-<%= gravatar_for @user %>
-<%= @user.name %>
+<h1 class = "user">
+Your Posts	
+<% #gravatar_for @user %>
+<% #@user.name %>
 </h1>
 
 <% unless @user.posts.empty? %>
