--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -20,6 +20,11 @@ background: #fff;
 section h1 {
 font-size: 200%;
 }
+
+h1.user {
+	font-size: 200%;
+	color: #000066;
+}
 /* Links */
 a {
 color: #09c;
