--- a/app/views/shared/_signed_in_home.html.erb
+++ b/app/views/shared/_signed_in_home.html.erb
@@ -2,7 +2,7 @@
 <p>
 This is the Home Page for Campus Smack
 </p>
-<div class = "colleges">Click On Your Campus Below</div>
+<div class = "colleges">Click On Your Campus Below</div><br>
 <% @colleges.each do |college| %>
 <%= link_to college.name, college %><br>
 <% end %>
