--- a/app/views/shared/_signed_out_home.html.erb
+++ b/app/views/shared/_signed_out_home.html.erb
@@ -1,10 +1,8 @@
 <h1>Campus Smack</h1>
 <p>
 This is the Home Page for Campus Smack
-</p>
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
-<br>
-<div class = "colleges">Click On Your Campus Below</div>
+
+<div class = "colleges">Click On Your Campus Below</div><br>
 
 <% @colleges.each do |college| %>
 <%= link_to college.name, college %><br>
