--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up</h1>
+<h1>Campusmack Sign up</h1>
 <%= form_for(@user) do |f| %> 
 <%= render 'fields', :f => f %>
 <div class="actions">
