--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class = "colleges">Click On Your Campus Below</div>
+<div class = "colleges">Click On Your Campus Below</div><br>
 <% @colleges.each do |college| %>
 <%= link_to college.name, "/users/#{@user.id}/colleges/#{college.id}" %><br>
 <% end %>
