--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -26,7 +26,8 @@
 <% if session[:service_id] == service.id %>
 <span>Signed in</span>
 <% else %>
-<%= link_to "Remove this service", service, :confirm => 'Are you sure you want to remove this authentication?', :method => :delete, :class => "remove" %>
+<% @serv = service %>
+<%= link_to "Remove this service", @serv, :confirm => 'Are you sure you want to remove this authentication?', :method => :delete, :class => "remove" %>
 <% end %>
 </div>
 </div>
