--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	
     <title><%= title %></title>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
-	<%= javascript_include_tag 'jquery/jquery-1.6.1.min' %>
-	<%= javascript_include_tag :defaults %>
+	<%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs' %>
+	<%= yield(:head) %>
   </head>
   <body>
     <div class="container">
