--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -264,6 +264,9 @@ a { color: #74809a; text-decoration: none !important;}
 a:visited { color: #74809a; }
 a:hover { color: #c81419; }
 
+option {font-size:85%;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
+select {font-size:85%;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
+
 /* Old styling 
 a { color: #09c; text-decoration: none; }
 a:hover { color: #069; text-decoration: underline; }
